The right implementation of replace accented chars and replace chars not in the current encoding.

BUG: 114825